style.css
/*
Theme Name: Q
Text Domain: q
Version: 0.1
Requires at least: 5.5
Requires PHP: 7.0
Tested up to: 5.5
Description: FSE Theme
Author: aristath
Author URI: https://aristath.github.io
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html

All files, unless otherwise stated, are released under the GNU General Public
License version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned
with others.
*/

/***************************************
Basic styles
***************************************/

:root {
    font-size: 22px;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
    line-height: var(--wp--preset--line-height--medium);
}

html,
body {
    margin: 0;
    padding: 0;
}

body {
    background: var(--wp--preset--color--background);
}

* {
    box-sizing: border-box;
}

/***************************************
Headers
***************************************/
h1 {
    font-size: var(--wp--preset--font-size--huge);
    line-height: var(--wp--preset--line-height--small);
}

h2 {
    font-size: var(--wp--preset--font-size--large);
    line-height: var(--wp--preset--line-height--small);
}

h3 {
    font-size: var(--wp--preset--font-size--medium);
    line-height: var(--wp--preset--line-height--medium);
}

h4 {
    font-size: var(--wp--preset--font-size--normal);
    line-height: var(--wp--preset--line-height--medium);
}

h5 {
    font-size: var(--wp--preset--font-size--small);
    line-height: var(--wp--preset--line-height--large);
}

h6 {
    font-size: var(--wp--preset--font-size--small);
    line-height: var(--wp--preset--line-height--large);
}

/***************************************
Layout
***************************************/
:root {
    --contentWidth: 900px;
    --wideWidth: calc(1.5 * var(--contentWidth));
}

.wp-site-blocks {
    --paddingHorizontal: 1em;
    padding: 0 var(--paddingHorizontal);
}

.wp-site-blocks > *:not(.wp-block-post-content),
.wp-site-blocks .wp-block-post-content > * {
    max-width: var(--contentWidth);
    margin-left: auto;
    margin-right: auto;
}

.wp-site-blocks .alignwide {
    width: var(--wideWidth);
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
}

.wp-site-blocks .alignfull {
    transform: translateX(calc(0px - var(--paddingHorizontal)));
    width: calc(100% + 2 * var(--paddingHorizontal));
    max-width: calc(100% + 2 * var(--paddingHorizontal));
    box-sizing: content-box;
}

.aligncenter {
    text-align: center;
}

.wp-site-blocks .alignleft {
    float: left;
    /* margin-left: calc(50% - var(--contentWidth) / 2); */
    margin-right: 2em;
    max-width: 360px;
}

.wp-site-blocks .alignright {
    float: right;
    /* margin-right: calc(50% - var(--contentWidth) / 2); */
    margin-left: 2em;
    max-width: 360px;
}    

/***************************************
Dark mode.
***************************************/
@media (prefers-color-scheme: dark) {
    html body {
        --wp--preset--color--text: #fff;
        --wp--preset--color--background: #000;
    }
}

/***************************************
Accessibility
***************************************/
.wp-site-blocks a {
    text-decoration: underline;
    text-decoration-thickness: 2px;
    font-weight: 600;
}

.wp-site-blocks a:focus {
    outline: 2px solid;
    outline-offset: 2px;
    border-bottom-color: transparent;
}

.screen-reader-text {
	border: 0;
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(50%);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute !important;
	width: 1px;
	word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
}

.screen-reader-text:focus {
	background-color: #eee;
	clip: auto !important;
	clip-path: none;
	color: #444;
	display: block;
	font-size: 1em;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar. */
}

/***************************************
Blocks styles.
***************************************/
.wp-block-navigation:not(.has-background) .wp-block-navigation__container .wp-block-navigation-link:not(.has-text-color) {
    color: currentColor;
}

